fixed problem with email in footer getting cut off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,4 +179,8 @@ h2 {
     width: calc(100% - 20px);
     text-indent: 0px;
   }
+
+  .foot {
+    font-size: 25px;
+  }
 }
